--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -45,6 +45,13 @@ nav a {
   width: 800px;
 }
 
+#paragraph {
+    width:75%; 
+    margin-left:auto; 
+    margin-right:auto; 
+    margin-top: 50px;
+}
+
 h1 {
   color: #757575;
 }
