--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -46,9 +46,9 @@ nav a {
 }
 
 #paragraph {
-    width:75%; 
-    margin-left:auto; 
-    margin-right:auto; 
+    width:75%;
+    margin-left:auto;
+    margin-right:auto;
     margin-top: 50px;
 }
 
@@ -69,10 +69,88 @@ input {
 }
 
 button {
+  width:auto;
+  length:8%;
   font-size: 18px;
 }
 #message {
   width: 796px ;
   height: 50px;
   placeholder: "Write a message here...";
+}
+
+@media screen and (max-width: 768px){
+  nav {
+    padding:3%;
+    text-align:center;
+    width: 94%;
+  }
+  nav a {
+    text-align:center;
+    font-size:18px;
+    margin:-1%;
+    padding:-12px;
+    /*background-color:red;*/
+    width: 24%;
+  }
+  #navTitle{
+    font-size:24px;
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+    width:90%;
+  }
+  #container {
+    display:inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  #chat {
+    padding:0% 4% 8% 0%;
+    width: 96%;
+  }
+  #title {
+    text-align:center;
+    margin:1%;
+    font-size:2em;
+  }
+  #message{
+    display:block;
+    width:100%;
+    height:10%;
+    position: fixed;
+    bottom:0px;
+  }
+  #bar{
+    display:block;
+    width:100%;
+    position: fixed;
+    bottom:10%;
+    text-align:left;
+  }
+  #reload{
+    position:fixed;
+    right: 3%;
+    bottom:10%;
+    z-index: 1;
+    color:white;
+  }
+  #submit{
+    position:fixed;
+    right: 0%;
+    bottom:0%;
+    z-index: 1;
+    color:black;
+  }
+
+  .preview {
+    display:block;
+    width:100%;
+    position:fixed;
+    bottom:12%;
+    padding-bottom:5%;
+    background-color: #eeeeee;
+  }
+
 }
