--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -93,6 +93,11 @@ button {
     /*background-color:red;*/
     width: 24%;
   }
+  textarea,input[type="text"]{
+    display:block;
+    width:100%;
+    height:10%;
+  }
   #navTitle{
     font-size:24px;
     margin-left:auto;
