--- a/src/main/webapp/css/mobile_first.css
+++ b/src/main/webapp/css/mobile_first.css
@@ -12,8 +12,36 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-
-
+body {
+  border:1px solid black;
+  margin: 0;
+  font-family: sans-serif;
+  line-height: 1.6;
+  color: #444;
+  background-color: #eeeeee;
+}
+nav {
+  margin:0%;
+  background-color: #283593;
+  padding:3%;
+  text-align:center;
+  width:94%;
+}
+nav a {
+  color:white;
+  display:inline-block;
+  font-size: 1.1em;
+  margin:1%;
+  text-decoration:none;
+  text-align:center;
+  width:16%;
+}
+#navTitle{
+  font-size:2em;
+  margin-left:auto;
+  margin-right:auto;
+  width:100%;
+}
 @media screen and (min-width: 768px){
 
 }
