--- a/src/main/webapp/css/mobile_first.css
+++ b/src/main/webapp/css/mobile_first.css
@@ -15,17 +15,22 @@
 body {
   border:1px solid black;
   margin: 0;
+  text-align:center;
   font-family: sans-serif;
   line-height: 1.6;
   color: #444;
   background-color: #eeeeee;
+  min-height:655px;
 }
 nav {
   margin:0%;
   background-color: #283593;
   padding:3%;
-  text-align:center;
   width:94%;
+}
+h3,h4 {
+  margin-bottom:0%;
+  line-height:0.2em;
 }
 nav a {
   color:white;
@@ -33,15 +38,82 @@ nav a {
   font-size: 1.1em;
   margin:1%;
   text-decoration:none;
-  text-align:center;
-  width:16%;
+  width:20%;
 }
-#navTitle{
+p,li {
+  text-align:left;
+}
+textarea {
+  display:block;
+  width:100%;
+}
+input[type="text"],input[type="password"] {
+  width:96%;
+  padding:1%;
+}
+#navTitle {
   font-size:2em;
   margin-left:auto;
   margin-right:auto;
   width:100%;
 }
+#container {
+  bottom:20%;
+}
+#messageBlock {
+  display:block;
+  position:fixed;
+  height:20%;
+  bottom:0%;
+  background-color:yellow;
+  width:100%;
+}
+#message{
+    display:block;
+    width:100%;
+    height:5%;
+    position:fixed;
+    bottom:5%;
+    left:0%;
+}
+#bar{
+    display:block;
+    width:100%;
+    position: fixed;
+    bottom:11%;
+    left:0%;
+    z-index: 1;
+    padding:1%;
+  }
+ #previewBlock {
+    display:block;
+    position:fixed;
+    width:100%;
+    bottom:16%;
+    right:0%;
+    min-height:5%;
+    background-color: #eeeeee;
+ }
+  #submit{
+    position:fixed;
+    width:50%;
+    height:5%;
+    right: 0%;
+    bottom:0%;
+    z-index: 1;
+    color:black;
+  }
+  #reload{
+    font-size:24px;
+    position:fixed;
+    left: 0%;
+    bottom:0%;
+    z-index: 2;
+    width:50%;
+    height:5%;
+    color:white;
+    background-color:grey;
+  }
 @media screen and (min-width: 768px){
 
 }
