--- a/src/main/webapp/css/mobile_first.css
+++ b/src/main/webapp/css/mobile_first.css
@@ -115,5 +115,68 @@ input[type="text"],input[type="password"] {
     background-color:grey;
   }
 @media screen and (min-width: 768px){
+  body {
+    margin: 0;
+    font-family: sans-serif;
+    line-height: 1.6;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #444;
+    background-color: #eeeeee;
+  }
+
+  nav {
+    background-color: #283593;
+  }
+
+  nav a {
+    color: white;
+    display: inline-block;
+    font-size: 24px;
+    margin: 15px;
+    text-decoration: none;
+  }
+
+  #navTitle {
+    font-size: 36px;
+  }
+
+  #container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+  }
+
+  #paragraph {
+      width:75%;
+      margin-left:auto;
+      margin-right:auto;
+      margin-top: 50px;
+  }
+
+  h1 {
+    color: #757575;
+  }
+
+  h3 {
+    color: blue;
+  }
+
+  h2 {
+    color: blue;
+  }
+
+  input {
+    font-size: 18px;
+  }
+
+  button {
+    font-size: 18px;
+  }
+  #message {
+    width: 796px ;
+    height: 50px;
+    placeholder: "Write a message here...";
+  }
 
 }
