fixes css bug on profile.jsp

--- a/src/main/webapp/css/mobile_first.css
+++ b/src/main/webapp/css/mobile_first.css
@@ -59,6 +59,11 @@ input[type="text"],input[type="password"] {
 #container {
   bottom:20%;
 }
+#chat {
+  background-color: white;
+  height: 500px;
+  overflow-y: scroll
+}
 #messageBlock {
   display:block;
   position:fixed;
