--- a/src/main/webapp/css/mobile_first.css
+++ b/src/main/webapp/css/mobile_first.css
@@ -98,6 +98,8 @@ input[type="text"],input[type="password"] {
     background-color: #eeeeee;
  }
   #submit{
+    float:right;
+    padding:.82%;
     position:fixed;
     width:50%;
     height:5%;
@@ -107,6 +109,7 @@ input[type="text"],input[type="password"] {
     color:black;
   }
   #reload{
+    float:left;
     font-size:24px;
     position:fixed;
     left: 0%;
@@ -116,6 +119,7 @@ input[type="text"],input[type="password"] {
     height:5%;
     color:white;
     background-color:grey;
+    text-decoration: none;
   }
 @media screen and (min-width: 769px){
   body {
